Fix Code smells
Issue-ID: CPS-89
Change-Id: Ib1b6fbc6b6d712f169100825683e6db3e7c85cb9
Signed-off-by: shivasubedi <shiva.subedi@est.tech>